# refuge

./: .gitignore  Cargo.toml  sample.env
migrations/: 000_create_tables.sql  001_todo_completed.sql  002_todo_clear.sql
src/: db.rs  main.rs
src/api/: mod.rs  ping.rs  todo.rs  user.rs
src/api/authorization/: jwt.rs  mod.rs
src/db/: authorization.rs  mod.rs  todo.rs  user.rs
static/: index.html
web/: package.json  rollup.config.js  tsconfig.json
web/src/: App.svelte  Router.svelte  stores.ts
web/src/components/: Todo.svelte
web/src/pages/: Dashboard.svelte  Login.svelte  One.svelte  Two.svelte
