[package]
name = "hipster-stack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1"
actix-files = "0.6"

anyhow = "1.0"
dotenv = "0.15"
log = "0.4"
env_logger = "0.9"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.6", features = ["runtime-actix-native-tls", "macros"] }
jsonwebtoken = "8.1.1"
argon2 = "0.4.1"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]
postgres = ["sqlx/postgres"]
